# nexus-manual-release

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
artifacts/products/electrolux_steam_oven/graph/: edges.jsonl  entities.jsonl  nodes.jsonl  semantic_index.npz
artifacts/products/electrolux_washer_dryer/graph/: edges.jsonl  entities.jsonl  nodes.jsonl  semantic_index.npz
artifacts/safety/: safety_veto.json  wrong_entity_veto.json
configs/: safety_gate.yaml
docs/: architecture.md  demo_script.md  offline.md  pipeline.md  setup_guide.md  troubleshooting.md
models/tokenizer/: merges.txt  tokenizer.json  tokenizer_config.json  vocab.json
src/nexus_manual_release/: __init__.py  cli.py
src/nexus_manual_release/modeling/: __init__.py  nexus.py  nexus_config.py
src/nexus_manual_release/runtime/: __init__.py  contract.py  llm_verbalizer.py  nexus_config.py  nexus_provider.py  nexus_verbalizer.py  packet_enrichment.py  semantic_retrieval.py
tests/: conftest.py  test_bundle_integrity.py  test_cli.py  test_imports.py  test_inference_paths.py  test_offline_operation.py
